@@ -4,6 +4,7 @@ History:
 
 5.0.1   2020/xx/xx
       - produce wheels for Python 3 only
+      - tools: force write of file when saving a PNG file
 
 5.0.0   2019/12/31
       - removed support for Python 2.7
